@@ -198,6 +198,18 @@ void fbCompositeSrc_8888x8x8888mmx (pixman_operator_t	op,
 				    INT16       yDst,
 				    CARD16      width,
 				    CARD16      height);
+void fbCompositeSrc_8888x8888mmx (pixman_operator_t      op,
+				  PicturePtr pSrc,
+				  PicturePtr pMask,
+				  PicturePtr pDst,
+				  INT16      xSrc,
+				  INT16      ySrc,
+				  INT16      xMask,
+				  INT16      yMask,
+				  INT16      xDst,
+				  INT16      yDst,
+				  CARD16     width,
+				  CARD16     height);
 Bool fbCopyAreammx (FbPixels	*pSrc,
 		    FbPixels	*pDst,
 		    int		src_x,
